manifest: fix typo on description

--- a/manifest.json
+++ b/manifest.json
@@ -7,7 +7,7 @@
     "url": "https://addons.mozilla.org/en-US/firefox/user/15657968"
   },
 
-  "description": "Fuck the frastrating PTC ads web sites.",
+  "description": "Fuck the frustrating Pay Per Click (PTC) ads web sites.",
   "icons": {
     "48": "logo_48.png",
     "96": "logo_96.png"
